; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/pch_gbe/extr_pch_gbe_main.c_pch_gbe_mdio_read.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/pch_gbe/extr_pch_gbe_main.c_pch_gbe_mdio_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }
%struct.pch_gbe_adapter = type { %struct.pch_gbe_hw }
%struct.pch_gbe_hw = type { i32 }

@PCH_GBE_HAL_MIIM_READ = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.net_device*, i32, i32)* @pch_gbe_mdio_read to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pch_gbe_mdio_read(%struct.net_device* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.net_device*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.pch_gbe_adapter*, align 8
  %8 = alloca %struct.pch_gbe_hw*, align 8
  store %struct.net_device* %0, %struct.net_device** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %9 = load %struct.net_device*, %struct.net_device** %4, align 8
  %10 = call %struct.pch_gbe_adapter* @netdev_priv(%struct.net_device* %9)
  store %struct.pch_gbe_adapter* %10, %struct.pch_gbe_adapter** %7, align 8
  %11 = load %struct.pch_gbe_adapter*, %struct.pch_gbe_adapter** %7, align 8
  %12 = getelementptr inbounds %struct.pch_gbe_adapter, %struct.pch_gbe_adapter* %11, i32 0, i32 0
  store %struct.pch_gbe_hw* %12, %struct.pch_gbe_hw** %8, align 8
  %13 = load %struct.pch_gbe_hw*, %struct.pch_gbe_hw** %8, align 8
  %14 = load i32, i32* %5, align 4
  %15 = load i32, i32* @PCH_GBE_HAL_MIIM_READ, align 4
  %16 = load i32, i32* %6, align 4
  %17 = call i32 @pch_gbe_mac_ctrl_miim(%struct.pch_gbe_hw* %13, i32 %14, i32 %15, i32 %16, i32 0)
  ret i32 %17
}

declare dso_local %struct.pch_gbe_adapter* @netdev_priv(%struct.net_device*) #1

declare dso_local i32 @pch_gbe_mac_ctrl_miim(%struct.pch_gbe_hw*, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
